--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
 .header{
     display: flex;
     font-family: headerFont;
-    font-size: 72px;
+    font-size: 10vh;
     color: green;
     background-color: black;
     padding: 60px;
