--- a/homestyles.css
+++ b/homestyles.css
@@ -30,8 +30,6 @@ body{
 
 button{
     background-color: green;
-
-    
     font-family: headerFont;
     font-size: 20px;
     padding: 30px 50px;
@@ -40,6 +38,7 @@ button{
     border-style: solid;
     border-width: 2px;
     border-color: black;
+    color: black;
 }
 
 button:hover{
@@ -57,8 +56,8 @@ h1{
 @media screen and (max-width: 500px){
     .title{
         width: 100%;
+        height: 100vh;
         background-image: url(homebg.jpg);
-        background-size: cover;
         background-position: center;
     }
           
