--- a/homestyles.css
+++ b/homestyles.css
@@ -56,7 +56,7 @@ h1{
 @media screen and (max-width: 500px){
     .title{
         width: 100%;
-        height: 100vh;
+        height: 100%;
         background-image: url(homebg.jpg);
         background-position: center;
         font-size: 50%
