--- a/homestyles.css
+++ b/homestyles.css
@@ -54,6 +54,9 @@ h1{
 }
 
 @media screen and (max-width: 500px){
+    body{
+        display: none;
+    }
     .buttons{
         display: inline;
         max-width: 100%;
