--- a/homestyles.css
+++ b/homestyles.css
@@ -57,6 +57,7 @@ h1{
     .title{
         min-height: 100vh;
         width: 100%;
+        font-size: 50%;
     }
     .buttons{
         display: inline;
