--- a/homestyles.css
+++ b/homestyles.css
@@ -58,6 +58,7 @@ h1{
         min-height: 100vh;
         width: 100%;
         font-size: 50%;
+        flex-direction: row;
     }
     .buttons{
         display: inline;
