--- a/homestyles.css
+++ b/homestyles.css
@@ -55,10 +55,11 @@ h1{
 
 @media screen and (max-width: 500px){
     .title{
+        flex-wrap: no-wrap;
+        flex-direction: row;
         min-height: 100vh;
         width: 100%;
         font-size: 50%;
-        flex-direction: row;
     }
     .buttons{
         display: inline;
