--- a/homestyles.css
+++ b/homestyles.css
@@ -56,11 +56,17 @@ h1{
 @media screen and (max-width: 500px){
     .title{
         flex-wrap: no-wrap;
-        flex-direction: row;
         min-height: 100vh;
         width: 100%;
         font-size: 50%;
     }
+
+    .buttons{
+        display: flex;
+        flex-direction: row;
+        max-width: 100vw;
+    }
+    
     button{
         padding: 20px 30px;
     }
