--- a/homestyles.css
+++ b/homestyles.css
@@ -56,6 +56,7 @@ h1{
 @media screen and (max-width: 500px){
     .title{
         flex-wrap: no-wrap;
+        flex-direction:column;
         min-height: 100vh;
         width: 100%;
         font-size: 50%;
