--- a/homestyles.css
+++ b/homestyles.css
@@ -58,7 +58,7 @@ h1{
         flex-wrap: no-wrap;
         flex-direction:column;
         min-height: 100vh;
-        width: 100%;
+        min-width: 100vw;
         font-size: 50%;
     }
 
