--- a/homestyles.css
+++ b/homestyles.css
@@ -57,8 +57,7 @@ h1{
     .title{
         flex-wrap: no-wrap;
         flex-direction:column;
-        min-height: 100vh;
-        min-width: 100vw;
+        background-size: cover;
         font-size: 50%;
     }
 
