--- a/homestyles.css
+++ b/homestyles.css
@@ -56,7 +56,7 @@ h1{
 @media screen and (max-width: 500px){
     .title{
         flex-wrap: no-wrap;
-        flex-direction:column;
+        flex-direction:row;
         background-image: none;
         font-size: 50%;
     }
@@ -69,8 +69,10 @@ h1{
 
     .buttons{
         display: flex;
-        flex-direction: row;
-        max-width: 100vw;
+        flex-direction: column;
+        position: absolute;
+        right: 0px;
+        
     }
     
     button{
