--- a/homestyles.css
+++ b/homestyles.css
@@ -66,3 +66,11 @@ h1{
         background-position: center;
     }
 }
+
+@media screen  and (min-width:500px) and (max-width:700px){
+    .buttons{
+        display: flex;
+        margin-right:auto;
+        margin-left:auto;
+    }
+}
