--- a/homestyles.css
+++ b/homestyles.css
@@ -71,3 +71,17 @@ h1{
         background-position: center;
     }
 }
+
+@media screen and (orientation: landscape) and (max-width: 700px){
+    .title{
+        flex-wrap: no-wrap;
+        background-image: none;
+        font-size: 50%;
+    }
+    
+    body{
+        background-image: url(homebg.jpg);
+        background-size: cover;
+        background-position: center;
+    } 
+}
