--- a/homestyles.css
+++ b/homestyles.css
@@ -62,6 +62,7 @@ h1{
 @media screen and (max-width: 500px){
     .title{
         flex-wrap: no-wrap;
+        flex-direction: column;
         background-image: none;
         font-size: 50%;
     }
