--- a/homestyles.css
+++ b/homestyles.css
@@ -62,9 +62,12 @@ h1{
 @media screen and (max-width: 500px){
     .title{
         flex-wrap: no-wrap;
-        flex-direction: column;
         background-image: none;
         font-size: 50%;
+    }
+
+    .buttons{
+        flex-direction: column;
     }
 
     body{
