--- a/homestyles.css
+++ b/homestyles.css
@@ -28,6 +28,29 @@ body{
     background-position: center;
 }
 
+.navbar{
+    display: none;
+    position: relative;
+    flex-direction: column;
+    list-style-type: none;
+    background-color: green;
+    color: black;
+    font-size: 24px;
+    width: 100vw;
+    text-align: center;
+}
+
+.navbar a{
+    display: block;
+    text-decoration: none;
+    padding: 60px;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+    color: black;
+}
+
+
 button{
     background-color: green;
     font-family: headerFont;
@@ -54,6 +77,14 @@ h1{
 }
 
 @media screen and (max-width: 500px){
+    .buttons{
+        display: none;
+    }
+
+    .navbar{
+        display: flex;
+    }
+    
     .title{
         flex-wrap: no-wrap;
         background-image: none;
