--- a/homestyles.css
+++ b/homestyles.css
@@ -81,6 +81,9 @@ h1{
 }
 
 @media screen and (max-width: 500px) {
+    .navbar{
+        display: flex;
+    }
     .title{
         flex-wrap: no-wrap;
         background-image: none;
