--- a/homestyles.css
+++ b/homestyles.css
@@ -29,7 +29,7 @@ body{
 }
 
 .navbar{
-    display: flex;
+    display: none;
     position: relative;
     flex-direction: column;
     list-style-type: none;
@@ -80,7 +80,15 @@ h1{
     color: green;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 500px){
+    .buttons{
+        display: none;
+    }
+
+    .navbar{
+        display:flex;
+    }
+    
     .title{
         flex-wrap: no-wrap;
         background-image: none;
