--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,7 @@ html{
 
 .food > div{
     margin: 20px 10px;
+    padding: 3px;
     font-size: 24px;
     border-style: solid;
     border-width: 2px;
