--- a/homestyles.css
+++ b/homestyles.css
@@ -33,8 +33,8 @@ body{
     position: relative;
     flex-direction: column;
     list-style-type: none;
-    background-color: black;
-    color: green;
+    background-color: green;
+    color: black;
     font-size: 24px;
     width: 100vw;
     text-align: center;
